--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,28 @@
 [tox]
-envlist = py35
+envlist = py35, lint
 skip_missing_interpreters = True
-
-[pylint]
 
 
 [testenv]
 ignore_errors = True
 setenv =
-	LANG=en_US.UTF-8
-	PYTHONPATH={toxinidir}:{toxinidir}/myusps
+        LANG=en_US.UTF-8
+        PYTHONPATH={toxinidir}:{toxinidir}/myusps
 deps =
-	pylint
-	pydocstyle
-	isort
+        pylint
+        pydocstyle
+        isort
+        pytest
+        pytest-cov
+        pytest-sugar
+        requests_mock
 commands =
-	pylint --output-format=colorized --reports n myusps
-	pydocstyle myusps
-	isort --recursive --check-only --diff myusps
+        py.test -v --cov-report term-missing --cov myusps
+
+
+[testenv:lint]
+ignore_errors = True
+commands =
+        pylint --output-format=colorized --reports n myusps
+        pydocstyle myusps
+        isort --recursive --check-only --diff myusps
