--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ cache:
   directories:
     - $HOME/.cache/pip
 language: python
-python: "3.5"
+python:
+  - "3.5"
+  - "3.6"
 install: "pip install tox"
 script: tox
